--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h2>this is heading 5</h2>
     <h2>this is heading 6</h2>
     <h2>this is heading 7</h2>
-    <h2>this is heading 8</h2>    
+    <h2>this is heading 8</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione eligendi, quam quasi facere consequatur facilis quibusdam recusandae odit velit impedit cumque iure iusto ut, possimus ex excepturi voluptatum vel repudiandae.</p>    
 </body>
 </html>
