--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione eligendi, quam quasi facere consequatur facilis quibusdam recusandae odit velit impedit cumque iure iusto ut, possimus ex excepturi voluptatum vel repudiandae.</p>    
 
     <a href="github/techosman">Find me in github</a>
+
+    <!-- Add me -->
+    <p>Hasib repo</p>
+    <a href="github/hasibtech">Find me in github</a>
 </body>
 </html>
